--- a/docs/关于自动获取微信参数.md
+++ b/docs/关于自动获取微信参数.md
@@ -1,50 +1,107 @@
 ## 关于如何自动获取微信参数
 
+思路有以下几种:
+
+1. 用python的win32的api获取fillder的参数
+
+2. 用anyproxy获取参数(需要懂JS，进行二次开发)，这个貌似是目前最流行的方式
+
+3. 用mitmproxy获取参数(这个是python开发的第三方包，进行二次开发)，本文准备使用的方式
+
 ### 安装`mitmproxy`
 
-[下载地址](https://github.com/mitmproxy/mitmproxy/releases)
+最好使用pip进行安装`pip3 install mitproxy`
 
-按照对应系统进行下载
+或者进入[官方网站](https://github.com/mitmproxy/mitmproxy/releases)按照对应系统进行下载
 
-这里默认抓取WeChat的PC端
+这里抓取WeChat的是移动端，具体`mitproxy`使用方式就不做介绍了，下面附上代码：
 
-注: 如果系统中没有WeChat的PC端，则需要设置为抓取移动端流量
+调用方法
 
-### 代码部分
+```python
+from get_params import main
 
-思路一：
+appmsg_token, cookie = mmain(fname)
+```
 
-不使用第三方包`mitmproxy`，就使用`subprocess`监控命令的输出，如果获取到了相关url就停止，之后就截取参数
+使用命令`python get_params.py`可以自动运行`mitmdump`, 之后需要人工连接手机，进入任意一篇微信推文，获取到相关参数后自动处理返回`appmsg_token`和`cookie`
+
+```python
+# get_params.py
+# coding: utf-8
+from mitmproxy import io
+from mitmproxy.exceptions import FlowReadException
+import re
+import os
+
+# command: python get_params outfile
+def get_params(outfile):
+    with open(outfile, "rb") as logfile:
+        freader = io.FlowReader(logfile)
+        try:
+            for f in freader.stream():
+                # 获取完整的请求信息
+                state = f.get_state()
+                # 尝试获取cookie和appmsg_token,如果成功就停止
+                try:
+                    # 截取其中request部分
+                    request = state["request"]
+                    # 提取Cookie
+                    for item in request["headers"]:
+                        key, value = item
+                        if key == b"Cookie":
+                            cookie = value.decode()
+
+                    # 提取appmsg_token
+                    path = request["path"].decode()
+                    appmsg_token_string = re.findall("appmsg_token.+?&", path)
+                    appmsg_token = appmsg_token_string[0].split("=")[1][:-1]
+                    break
+                except Exception:
+                    continue
+        except FlowReadException as e:
+            print("Flow file corrupted: {}".format(e))
+    return appmsg_token, cookie
+
+def main(fname):
+    outfile = "outfile"
+    os.system(
+        "mitmdump -q -s get_outfile.py -w {} mp.weixin.qq.com/mp/getappmsgext".
+        format(outfile))
+    try:
+        os.system("rm ./-q")
+    except Exception:
+        pass
+    return get_params(outfile)
+```
+
+保存输出文件`outfile`
 
 ```python
 # coding: utf-8
-import time
-import subprocess
-import locale
-import codecs
+# get_outfile.py
+import urllib
+import sys
+from mitmproxy import io, http
 
-ps = subprocess.Popen(
-    'mitmdump -p 8888',
-    stdin=subprocess.PIPE,
-    stdout=subprocess.PIPE,
-    shell=True)
-while True:
-    data = ps.stdout.readline()
-    if data == b'':
-        if ps.poll() is not None:
-            break
-    else:
-        string = data.decode(codecs.lookup(locale.getpreferredencoding()).name)
-        if "getappmsgext" in string:
-            break
 
-for item in string.split("&"):
-    if "key=" in item:
-        key = item[4:]
-    if "appmsg_token=" in item:
-        appmsg_token = item[13:]
+# 使用命令行过滤规则
+# command: mitmdump -s get_outfile.py -w outfile mp.weixin.qq.com/mp/getappmsgext
+class Writer:
+    def __init__(self, path: str) -> None:
+        self.f = open(path, "wb")
+        self.w = io.FlowWriter(self.f)
+
+    def response(self, flow: http.HTTPFlow) -> None:
+        self.w.add(flow)
+        url = urllib.parse.unquote(flow.request.url)
+        if "mp.weixin.qq.com/mp/getappmsgext" in url:
+            exit()
+
+    def done(self):
+
+        self.f.close()
+
+
+addons = [Writer(sys.argv[1])]
 ```
-
-思路二：
-
-使用第三方包`mitmproxy`, 直接调取相关API, 但是缺点就是需要额外安装第三方包。。。这里不做介绍。
