--- a/docs/关于自动获取微信参数.md
+++ b/docs/关于自动获取微信参数.md
@@ -28,11 +28,11 @@ appmsg_token, cookie = mmain(fname)
 
 ```python
 # get_params.py
-# coding: utf-8
 from mitmproxy import io
 from mitmproxy.exceptions import FlowReadException
 import re
 import os
+
 
 # command: python get_params outfile
 def get_params(outfile):
@@ -63,11 +63,12 @@ def get_params(outfile):
             print("Flow file corrupted: {}".format(e))
     return appmsg_token, cookie
 
-def main(fname):
-    outfile = "outfile"
-    os.system(
-        "mitmdump -q -s get_outfile.py -w {} mp.weixin.qq.com/mp/getappmsgext".
-        format(outfile))
+
+def main(outfile):
+    path = os.path.split(os.path.realpath(__file__))[0]
+    command = "mitmdump -q -s {}/get_outfile.py -w {} mp.weixin.qq.com/mp/getappmsgext".format(
+        path, outfile)
+    os.system(command)
     try:
         os.system("rm ./-q")
     except Exception:
