--- a/docs/关于自动获取微信参数.md
+++ b/docs/关于自动获取微信参数.md
@@ -14,14 +14,19 @@
 
 或者进入[官方网站](https://github.com/mitmproxy/mitmproxy/releases)按照对应系统进行下载
 
-这里抓取WeChat的是移动端，具体`mitproxy`使用方式就不做介绍了，下面附上代码：
+关于`mitproxy`的使用可以参考[这篇文章](https://www.jianshu.com/p/0cc558a8d6a2)， 最好配置好移动端ssl证书，虽然在这里貌似不配置也行，不过每次会弹出警告
+
+关于`mitproxy`的二次开发可以参考官方给的demo，[github地址](https://github.com/mitmproxy/mitmproxy/tree/master/examples/simple)
+
+下面附上代码：
+
 
 调用方法
 
 ```python
 from get_params import main
 
-appmsg_token, cookie = mmain(fname)
+appmsg_token, cookie = main(fname)
 ```
 
 使用命令`python get_params.py`可以自动运行`mitmdump`, 之后需要人工连接手机，进入任意一篇微信推文，获取到相关参数后自动处理返回`appmsg_token`和`cookie`
