--- a/docs/关于自动获取微信参数.md
+++ b/docs/关于自动获取微信参数.md
@@ -4,7 +4,7 @@
 
 1. 用python的win32的api获取fillder的参数
 
-2. 用anyproxy获取参数(需要懂JS，进行二次开发)，这个貌似是目前最流行的方式
+2. 用anyproxy获取参数(需要懂JS，进行二次开发)，这个貌似是目前使用较多的方式
 
 3. 用mitmproxy获取参数(这个是python开发的第三方包，进行二次开发)，本文准备使用的方式
 
@@ -24,12 +24,14 @@
 调用方法
 
 ```python
-from get_params import main
+from wechatarticles import ReadOutfile
 
-appmsg_token, cookie = main(fname)
+appmsg_token, cookie = Reader().contral(outfile)
 ```
 
-使用命令`python get_params.py`可以自动运行`mitmdump`, 之后需要人工连接手机，进入任意一篇微信推文，获取到相关参数后自动处理返回`appmsg_token`和`cookie`
+使用前提，手机和电脑处于同一个局域网内，手动设置同电脑一样的静态ip, 端口默认8080
+
+使用命令`python get_params.py`可以自动运行`mitmdump`命令, 进入任意一篇微信推文，获取到相关参数后会自动处理返回`appmsg_token`和`cookie`
 
 ```python
 # get_params.py
