update mitproxy to mitmproxy and update test files

--- a/docs/关于自动获取微信参数.md
+++ b/docs/关于自动获取微信参数.md
@@ -10,13 +10,13 @@
 
 ### 安装`mitmproxy`
 
-最好使用pip进行安装`pip3 install mitproxy`
+最好使用pip进行安装`pip3 install mitmproxy`
 
 或者进入[官方网站](https://github.com/mitmproxy/mitmproxy/releases)按照对应系统进行下载
 
-关于`mitproxy`的使用可以参考[这篇文章](https://www.jianshu.com/p/0cc558a8d6a2)， 最好配置好移动端ssl证书，虽然在这里貌似不配置也行，不过每次会弹出警告
+关于`mitmproxy`的使用可以参考[这篇文章](https://www.jianshu.com/p/0cc558a8d6a2)， 最好配置好移动端ssl证书，虽然在这里貌似不配置也行，不过每次会弹出警告
 
-关于`mitproxy`的二次开发可以参考官方给的demo，[github地址](https://github.com/mitmproxy/mitmproxy/tree/master/examples/simple)
+关于`mitmproxy`的二次开发可以参考官方给的demo，[github地址](https://github.com/mitmproxy/mitmproxy/tree/master/examples/simple)
 
 下面附上代码：
 
